build/log/idf_py_stderr_output_52294
Command: make -j 18 all
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c: In function 'set_led_rgb':
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:78:5: error: implicit declaration of function 'gpio_set_level' [-Wimplicit-function-declaration]
   78 |     gpio_set_level(LED_R_GPIO, r);
      |     ^~~~~~~~~~~~~~
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c: In function 'app_main':
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:269:5: error: implicit declaration of function 'gpio_reset_pin' [-Wimplicit-function-declaration]
  269 |     gpio_reset_pin(LED_R_GPIO);
      |     ^~~~~~~~~~~~~~
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:270:5: error: implicit declaration of function 'gpio_set_direction' [-Wimplicit-function-declaration]
  270 |     gpio_set_direction(LED_R_GPIO, GPIO_MODE_OUTPUT);
      |     ^~~~~~~~~~~~~~~~~~
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:270:36: error: 'GPIO_MODE_OUTPUT' undeclared (first use in this function)
  270 |     gpio_set_direction(LED_R_GPIO, GPIO_MODE_OUTPUT);
      |                                    ^~~~~~~~~~~~~~~~
/mnt/42849DD9849DCFB1/ufc/2025.2/Embarcados/esp32/idf/AWS_Wifi/main/AWS_Wifi.c:270:36: note: each undeclared identifier is reported only once for each function it appears in
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:91: esp-idf/main/CMakeFiles/__idf_main.dir/AWS_Wifi.c.obj] Erro 1
make[1]: *** [CMakeFiles/Makefile2:5944: esp-idf/main/CMakeFiles/__idf_main.dir/all] Erro 2
make: *** [Makefile:136: all] Erro 2
